# sprite-packer

./: License.md  README.md  ReadMe.md  package-lock.json  package.json  quasar.config.js
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: main.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: macros.rs  main.rs
src-tauri/src/anim/: anim.rs  cln.rs  mod.rs  sprite.rs
src-tauri/src/app/: app.rs  mod.rs  settings.rs
src-tauri/src/srv/: pack.rs
src-tauri/src/tk2d/: anim.rs  clip.rs  cln.rs  info.rs  lib.rs  mod.rs  sprite.rs
src-tauri/src/util/: fs.rs
src/components/: LabeledLinearProgress.tsx  SelectableList.css  SelectableList.tsx  SelectableList.vue
src/data/: classes.ts  i18n.ts
src/i18n/: index.ts
src/i18n/de/: index.ts
src/i18n/en-US/: index.ts
src/i18n/es/: index.ts
src/i18n/fr/: index.ts
src/i18n/zh-CN/: index.ts
src/pages/: HomePage.vue
src/stores/: app.ts
