[package]
name = "sprite-packer"
version = "0.1.0"
description = "Packs sprites dumped by GODump into an atlas"
authors = ["Jason Ngo <jngo102@aim.com>"]
license = "MIT"
repository = "https://github.com/jngo102/sprite-packer"
default-run = "sprite-packer"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "^1", features = [] }

[dependencies]
confy = "^0"
image = "^0"
log = "^0"
notify = { version = "^5", default-features = false, features = ["macos_kqueue"] }
rayon = "^1"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
simple-logging = "^2"
tauri = { version = "^1", features = [ "protocol-asset", "compression", "dialog", "wry"], default-features = false }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
